app/Home.module.css
& section {
  padding-inline: clamp(1rem, calc(0.5rem + 3vw), 5rem);
  padding-block: var(--7xl);
}

& h2 {
  /* font-size: clamp(40px, (33px + 1.5625vw) * 1, 48px); */
  font-size: var(--3xl);
  font-weight: 700;
  text-transform: uppercase;

  @media screen and (min-width: 768px) {
    font-size: var(--7xl);
  }
}

& p {
  opacity: 0.5;
  font-size: 0.9rem;
  line-height: 1.3em;
}

& .img_container {
  display: flex;
  /* height: 360px; */
  height: 100%;
  border-radius: 1rem;
  overflow: hidden;

  & img {
    width: 50%;
    object-fit: cover;
  }

  & img:only-child {
    width: 100%;
  }
}

.hero {
  background-color: rgba(0, 0, 0, 0);
  position: relative;
  height: calc(100vh - var(--navbar-height));
  z-index: 1;
  display: flex;
  gap: var(--s);
  flex-direction: column;
  justify-content: center;
  align-items: center;

  &::before {
    content: "";
    background: linear-gradient(
        to bottom,
        rgba(0, 0, 0, 0.2),
        rgba(0, 0, 0, 0.9)
      ),
      url("../public/hero.jpg");
    background-size: cover;
    background-position: center;
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    z-index: -1;
  }

  & h1 {
    font-size: 1.98rem;
    color: var(--orange-peel);
    font-weight: 600;
    text-transform: uppercase;
    line-height: 1.2em;
    text-align: center;

    @media screen and (min-width: 768px) {
      font-size: var(--7xl);
    }
  }

  & h3 {
    font-size: 1.3rem;
    color: var(--orange-peel);
    font-weight: 400;
    text-transform: uppercase;
    line-height: 1.2em;

    @media screen and (min-width: 768px) {
      font-size: var(--4xl);
    }
  }
}

.sub_hero {
  background-color: var(--orange-peel);
  min-height: 100vh;
  display: grid;
  place-items: flex-start;
  flex-direction: column;
  align-items: center;
  color: var(--black);

  & h2 {
    line-height: 0.9em;
    padding-block: var(--m);
  }

  & p {
    opacity: 0.7;
  }

  & button {
    margin-top: 1rem;
    align-self: flex-start;

    @media screen and (min-width: 768px) {
      font-size: var(--m);
    }
  }

  @media screen and (min-width: 768px) {
    grid-template-columns: 1fr 1fr;
    gap: var(--6xl);

    & h2 {
      font-size: var(--7xl);
    }

    & p {
      font-size: 1.2rem;
    }
  }
}

.how_it_works {
  display: grid;
  gap: clamp(28px, 18.614379085px + 1.3071895425vw, 32px);

  & article {
    display: flex;
    flex-direction: column;

    & figure {
      width: 100%;
      height: 224px;
      object-fit: cover;
      border-radius: 1rem;
      overflow: hidden;
      margin-block-end: var(--2xl);

      @media screen and (min-width: 768px) {
        height: 350px;
      }
    }

    & h3 {
      font-size: 1.5rem;
      font-weight: 300;
      line-height: var(--2xl);
      margin-block-end: var(--s);

      @media screen and (min-width: 768px) {
        font-size: var(--3xl);
        line-height: initial;
      }
    }

    & p {
      opacity: 0.7;
      font-size: 0.9rem;
      line-height: 1.3em;

      @media screen and (min-width: 768px) {
        font-size: 1.2rem;
      }
    }
  }

  @media screen and (min-width: 768px) {
    grid-template-columns: repeat(2, 1fr);

    & h2 {
      grid-column: span 2;
    }
  }
}

